2007-02-04  Per Abrahamsen  <abraham@dina.kvl.dk>

	* wid-edit.el (widget-default-create): Insert new text at the
	:from marker _after_ the marker, not before it.

2007-02-04  Alan Mackenzie  <acm@muc.de>

	* progmodes/cc-cmds.el (c-indent-line): Don't erase ^L when a line
	containing it is re-indented.

2007-02-03  Chong Yidong  <cyd@stupidchicken.com>

	* net/newsticker.el (newsticker--insert-image): Update docstring,
	and insert the image directly.
	(newsticker--buffer-redraw): Update docstring.

	* emacs-lisp/easy-mmode.el (define-globalized-minor-mode): Rename
	from define-global-minor-mode.

	* progmodes/cwarn.el (global-cwarn-mode): 
	* emacs-lisp/autoload.el (make-autoload): 
	* hi-lock.el (global-hi-lock-mode): 
	* font-core.el (global-font-lock-mode): All callers changed.

2007-02-03  Eli Zaretskii  <eliz@gnu.org>

	* textmodes/texnfo-upd.el (texinfo-menu-copy-old-description):
	Don't copy @ignore lines into menu descriptions.
	(texinfo-multi-file-update): Goto the @node line before attempting
	to pluck the node name.
	(texinfo-multiple-files-update): Reverse the optional arguments'
	order, as per the doc string and the `interactive' form.

2007-02-03  Chong Yidong  <cyd@stupidchicken.com>

	* image-mode.el: Use autoload to avoid overriding disabled setting
	applied in .emacs.

2007-02-03  acm  <acm@localhost.localdomain>

	* progmodes/cc-engine.el (c-in-knr-argdecl): Slight correction
	for, e.g. "void (*hdone)();" in a k&r list.  (No WS between
	adjacent paren groups).

2007-02-02  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* progmodes/ebnf2ps.el: Doc fixes.
	(ebnf-eps-buffer, ebnf-eps-region, ebnf-syntax-alist): Doc fixes.

2007-02-02  Eli Zaretskii  <eliz@gnu.org>

	* dired-x.el (dired-do-relsymlink): Add reference to
	dired-do-symlink.  Add an autoload cookie.

	* dired-aux.el (dired-do-symlink): Add reference to
	dired-do-relsymlink.

2007-02-02  Doug Maxey  <dwm@enoyolf.org>  (tiny change)
