@@ -1,3 +1,9 @@
+2007-02-04  David Kastrup  <dak@gnu.org>
+
+	* play/mpuz.el (mpuz-random-puzzle): Fix potential lockup when
+	`mpuz-allow-double-multiplicator' is non-zero, and correct
+	calculation of `min'.
+
 2007-02-04  Per Abrahamsen  <abraham@dina.kvl.dk>
 
 	* wid-edit.el (widget-default-create): Insert new text at the
